syntax = "proto3";

package offers;
option csharp_namespace = "Offers";

import "google/protobuf/timestamp.proto";

message MoneyEntity {
  string currency_code = 1;
  int32 units = 2;
  int32 nanos = 3;
}

message GeoPointEntity {
    double latitude = 1;
    double longitude = 2;
}

message LocationEntity {
    string name = 1;
    GeoPointEntity geoPoint = 2;
}

message ImageEntity {
    string url = 1;
    string lowResUrl = 2;
}

message DeliverableEntity {
    enum Type {
        post = 0;
        mention = 1;
        video = 2;
        custom = 3;
    }

    int32 id = 1;
    repeated Type deliverableTypes = 2;
    repeated string socialNetworkProviderIds = 3;
    string description = 4;
}

message DealTermsEntity {
    DeliverableEntity deliverable = 1;
    RewardEntity reward = 2;
}

message RewardEntity {
    enum Type {
        barter = 0;
        cash = 1;
        barterAndCash =2;
    }

    Type type = 1;
    MoneyEntity barterValue = 2;
    MoneyEntity cashValue = 3;
    string description = 4;
}

message OfferEntity {
    enum Status {
        unknown = 0;
        active = 1;
        inactive = 2;
        // Offer is still active but does not accept new proposals.
        closed = 3;
        // Not sure if this makes sense or if we just mark an offer as closed.
        archived = 4;
    }

    enum StatusReason {
        open = 0;
        // Business has closed this offer.
        userClosed = 1;
        // Maximum number of applicants reached.
        maximumReached = 2;
        // This offer violates the Terms of Service.
        tosViolation = 3;
        // This offer has been completed by all applicants.
        completed  = 4;
        expired = 5;
    }

    enum AcceptancePolicy {
        manualReview = 0;
        automaticAcceptMatching = 1;
        allowNegotiation = 2;
    }

    // Data that is always sent for an offer.
    uint32 schemaVersion = 1;
    string id = 2;
    uint32 revision = 3;
    Status status = 5;
    google.protobuf.Timestamp statusTimestamp = 6;
    StatusReason statusReason = 7;
    LocationEntity location = 8;
    string businessAccountId = 9;
    string businessName = 10;
    string businessDescription = 11;
    string businessAvatarThumbnailUrl = 12;

    string title = 13;
    string description = 14;
    google.protobuf.Timestamp created = 15;
    google.protobuf.Timestamp start = 16;
    google.protobuf.Timestamp end = 17;
    int32 minFollowers = 18;

    // If zero, an unlimited number are available.
    int32 numberOffered = 19;
    int32 numberRemaining = 20;

    ImageEntity thumbnail = 21;

    DealTermsEntity terms = 22;

    AcceptancePolicy acceptancePolicy = 23;

    repeated ImageEntity images = 24;
    repeated string categoryIds = 25;

    repeated string keywords = 26;
}
